Fix resizing when displayed on smaller screens

--- a/style.css
+++ b/style.css
@@ -25,6 +25,18 @@ input, select {
 	align-items: center;
 }
 
+@media (max-width: 1300px) {
+	.container {
+		flex-direction: column;
+		align-items: center;
+	}
+	.small {
+		margin: 20px;
+		flex-direction: row;
+		justify-content: space-around;
+	}
+}
+
 .tooltip {
 	position: absolute;
 	opacity: 0;
